--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/drop-OSS/drop
+            ghcr.io/decduck/pst
           tags: |
             type=schedule,pattern=nightly
             type=schedule,pattern=nightly.${{ steps.get_final_ver.outputs.today }}
